--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "embla-carousel-react": "^8.3.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
